<resources>

    <!-- HOME -->
    <string name="app_name">ArtUp</string>
    <string name="settings">Settings</string>
    <string name="play">Play</string>
    <string name="store">Store</string>
    <string name="stats">Stats</string>
    <string name="setup">Set Up Your Game</string>
    <string name="passes">Passes</string>
    <string name="number">Number</string>
    <string name="teams">Teams</string>
    <string name="time">Time</string>
    <string name="points">Points</string>
    <string name="next">Next</string>

    <!-- TEAMS -->
    <string name="chooseteam">Choose who you want to lose</string>
    <string name="teamname">Team Name</string>
    <string name="playername">Player Name</string>
    <string name="addplayer">Add a player</string>
    <string name="addteam">Add a team</string>

</resources>
